[package]
name = "rustsampleuselib"
version = "0.1.0"
authors = ["JM Hiver <jhiver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsamplelib = { git = "https://github.com/jhiver/rustsamplelib", branch="master" }
